new left aligned layout and main page content changes

--- a/public/landing.html
+++ b/public/landing.html
@@ -9,38 +9,98 @@
 <body>
     <header>
         <h1 class="header all-text">Southern Ohio Christian Conference</h1>
-        <nav>
-            <ul class="nav-links">
-                <li class="nav-link">Home</li>
-                <li class="nav-link">Teams</li>
-                <li class="nav-link">2023-24 Boys Varsity</li>
-                <li class="nav-link">2023-24 Boys Jr. High</li>
-                <li class="nav-link">2023-24 Girls Varsity</li>
-                <li class="nav-link">2023-24 Girls Jr. High</li>
-                <li class="nav-link">Upcoming Sports</li>
-            </ul>
-        </nav>
     </header>
     
     <main>
-        <div class="logo-div">
-            <img class="logo" src="assets\logo1soccsports.png">
-            <img class="logo" src="assets\logo2soccsports.png">
-            <img class="logo" src="assets\logo3soccsports.png">
+        <nav class="navbar">
+            <ul class="nav-links">
+                <a class="nav-link all-text">Home</a>
+                <li class="nav-link all-text">Teams</li>
+                <li class="nav-link all-text">2023-24 Boys Varsity</li>
+                <li class="nav-link all-text">2023-24 Boys Jr. High</li>
+                <li class="nav-link all-text">2023-24 Girls Varsity</li>
+                <li class="nav-link all-text">2023-24 Girls Jr. High</li>
+                <li class="nav-link all-text">Upcoming Sports</li>
+            </ul>
+        </nav>
+        <!-- <div class="logo-div">
+            
             <img class="logo" src="assets\logo4soccsports.png">
             <img class="logo" src="assets\logo5soccsports.png">
             <img class="logo" src="assets\logo6soccsports.png">
-        </div>
-        <div class="seasons-display">
+        </div> -->
+        <!-- <div class="seasons-display">
             <div class="seasons-display-header">
                 <h2 class="active-seasons-header all-text">Active Seasons</h2>
             </div>
             <ul class="active-seasons-list">
-                <li class="active-seasons-list-item">2023-24 Boys Varsity Basketball</li>
-                <li class="active-seasons-list-item">2023-24 Boys Jr. High Basketball</li>
-                <li class="active-seasons-list-item">2023-24 Girls Varsity Basketball</li>
-                <li class="active-seasons-list-item">2023-24 Girls Jr. High Basketball</li>
+                <li class="active-seasons-list-item all-text">2023-24 Boys Varsity Basketball</li>
+                <li class="active-seasons-list-item all-text">2023-24 Boys Jr. High Basketball</li>
+                <li class="active-seasons-list-item all-text">2023-24 Girls Varsity Basketball</li>
+                <li class="active-seasons-list-item all-text">2023-24 Girls Jr. High Basketball</li>
             </ul>
+        </div> -->
+        <div class="active">
+            <div class="team-div">
+                <img class="logo" src="assets\logo1soccsports.png">
+                <h3 class="team-id all-text">ACCS Eagles</h3>
+                <p class="record  all-text">0 - 12</p>
+                <div class="next-game-info">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@FCS Crusaders</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo" src="assets\logo2soccsports.png">
+                <h3 class="team-id all-text">FCS Crusaders</h3>
+                <p class="record all-text">6 - 6</p>
+                <div class="next-game-info">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@ACCS Eagles</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo" src="assets\logo3soccsports.png">
+                <h3 class="team-id all-text">HCA Crusaders</h3>
+                <p class="record all-text">12 - 0</p>
+                <div class="next-game-info">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@RCCA Eagles</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo" src="assets\logo4soccsports.png">
+                <h3 class="team-id all-text">RCCA Eagles</h3>
+                <p class="record  all-text">0 - 12</p>
+                <div class="next-game-info">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@HCA Crusaders</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo" src="assets\logo5soccsports.png">
+                <h3 class="team-id all-text">SCS Soldiers</h3>
+                <p class="record all-text">6 - 6</p>
+                <div class="next-game-info">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@WCA Lions</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo" src="assets\logo6soccsports.png">
+                <h3 class="team-id all-text">WCA Lions</h3>
+                <p class="record all-text">12 - 0</p>
+                <div class="next-game-info">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@SCS Soldiers</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
