more homepage wireframing edits

--- a/public/landing.html
+++ b/public/landing.html
@@ -23,79 +23,63 @@
                 <li class="nav-link all-text">Upcoming Sports</li>
             </ul>
         </nav>
-        <!-- <div class="logo-div">
-            
-            <img class="logo" src="assets\logo4soccsports.png">
-            <img class="logo" src="assets\logo5soccsports.png">
-            <img class="logo" src="assets\logo6soccsports.png">
-        </div> -->
-        <!-- <div class="seasons-display">
-            <div class="seasons-display-header">
-                <h2 class="active-seasons-header all-text">Active Seasons</h2>
-            </div>
-            <ul class="active-seasons-list">
-                <li class="active-seasons-list-item all-text">2023-24 Boys Varsity Basketball</li>
-                <li class="active-seasons-list-item all-text">2023-24 Boys Jr. High Basketball</li>
-                <li class="active-seasons-list-item all-text">2023-24 Girls Varsity Basketball</li>
-                <li class="active-seasons-list-item all-text">2023-24 Girls Jr. High Basketball</li>
-            </ul>
-        </div> -->
+
         <div class="active">
             <div class="team-div">
-                <img class="logo" src="assets\logo1soccsports.png">
-                <h3 class="team-id all-text">ACCS Eagles</h3>
-                <p class="record  all-text">0 - 12</p>
-                <div class="next-game-info">
+                <img class="logo team-block" src="assets\logo1soccsports.png">
+                <h3 class="team-id all-text team-block">ACCS Eagles</h3>
+                <p class="record  all-text team-block">0 - 12</p>
+                <div class="next-game-info  team-block">
                     <p class="all-text info-piece">School in Ohio</p>
                     <p class="all-text info-piece">@FCS Crusaders</p>
                     <p class="all-text info-piece">5:00</p>
                 </div>
             </div>
             <div class="team-div">
-                <img class="logo" src="assets\logo2soccsports.png">
-                <h3 class="team-id all-text">FCS Crusaders</h3>
-                <p class="record all-text">6 - 6</p>
-                <div class="next-game-info">
+                <img class="logo team-block" src="assets\logo2soccsports.png">
+                <h3 class="team-id all-text team-block">FCS Crusaders</h3>
+                <p class="record all-text team-block">6 - 6</p>
+                <div class="next-game-info team-block">
                     <p class="all-text info-piece">School in Ohio</p>
                     <p class="all-text info-piece">@ACCS Eagles</p>
                     <p class="all-text info-piece">5:00</p>
                 </div>
             </div>
             <div class="team-div">
-                <img class="logo" src="assets\logo3soccsports.png">
-                <h3 class="team-id all-text">HCA Crusaders</h3>
-                <p class="record all-text">12 - 0</p>
-                <div class="next-game-info">
+                <img class="logo team-block" src="assets\logo3soccsports.png">
+                <h3 class="team-id all-text team-block">HCA Crusaders</h3>
+                <p class="record all-text team-block">12 - 0</p>
+                <div class="next-game-info team-block">
                     <p class="all-text info-piece">School in Ohio</p>
                     <p class="all-text info-piece">@RCCA Eagles</p>
                     <p class="all-text info-piece">5:00</p>
                 </div>
             </div>
             <div class="team-div">
-                <img class="logo" src="assets\logo4soccsports.png">
-                <h3 class="team-id all-text">RCCA Eagles</h3>
-                <p class="record  all-text">0 - 12</p>
-                <div class="next-game-info">
+                <img class="logo team-block" src="assets\logo4soccsports.png">
+                <h3 class="team-id all-text team-block">RCCA Eagles</h3>
+                <p class="record  all-text team-block">0 - 12</p>
+                <div class="next-game-info team-block">
                     <p class="all-text info-piece">School in Ohio</p>
                     <p class="all-text info-piece">@HCA Crusaders</p>
                     <p class="all-text info-piece">5:00</p>
                 </div>
             </div>
             <div class="team-div">
-                <img class="logo" src="assets\logo5soccsports.png">
-                <h3 class="team-id all-text">SCS Soldiers</h3>
-                <p class="record all-text">6 - 6</p>
-                <div class="next-game-info">
+                <img class="logo team-block" src="assets\logo5soccsports.png">
+                <h3 class="team-id all-text team-block">SCS Soldiers</h3>
+                <p class="record all-text team-block">6 - 6</p>
+                <div class="next-game-info team-block">
                     <p class="all-text info-piece">School in Ohio</p>
                     <p class="all-text info-piece">@WCA Lions</p>
                     <p class="all-text info-piece">5:00</p>
                 </div>
             </div>
             <div class="team-div">
-                <img class="logo" src="assets\logo6soccsports.png">
-                <h3 class="team-id all-text">WCA Lions</h3>
-                <p class="record all-text">12 - 0</p>
-                <div class="next-game-info">
+                <img class="logo team-block" src="assets\logo6soccsports.png">
+                <h3 class="team-id all-text team-block">WCA Lions</h3>
+                <p class="record all-text team-block">12 - 0</p>
+                <div class="next-game-info team-block">
                     <p class="all-text info-piece">School in Ohio</p>
                     <p class="all-text info-piece">@SCS Soldiers</p>
                     <p class="all-text info-piece">5:00</p>
