--- a/public/landing.html
+++ b/public/landing.html
@@ -13,13 +13,19 @@
     
     <main>
         <nav class="navbar">
+            <h1 class="all-text">CONFERENCE LOGO</h1>
             <ul class="nav-links">
-                <a class="nav-link all-text">Home</a>
-                <li class="nav-link all-text">Teams</li>
-                <li class="nav-link all-text">2023-24 Boys Varsity</li>
-                <li class="nav-link all-text">2023-24 Boys Jr. High</li>
-                <li class="nav-link all-text">2023-24 Girls Varsity</li>
-                <li class="nav-link all-text">2023-24 Girls Jr. High</li>
+                <a class="nav-link all-text" href="landing.html">Home</a>
+                <a class="nav-link all-text" href="season-info.html">Boys Varsity Basketball</a>
+                <li class="nav-link all-text">Boys Jr. High Basketball</li>
+                <li class="nav-link all-text">Girls Varsity Basketball</li>
+                <li class="nav-link all-text">Girls Jr. High Basketball</li>
+                <li class="nav-link all-text">ACCS Eagles</li>
+                <li class="nav-link all-text">FCS Crusaders</li>
+                <li class="nav-link all-text">HCA Crusaders</li>
+                <li class="nav-link all-text">RCCA Eagles</li>
+                <li class="nav-link all-text">SCS Soldiers</li>
+                <li class="nav-link all-text">WCA Lions</li>
                 <li class="nav-link all-text">Upcoming Sports</li>
             </ul>
         </nav>
