--- a/public/season-info.html
+++ b/public/season-info.html
@@ -31,7 +31,7 @@
         </nav>
         <div class="content">
             <div class="standing all-text">
-                <h1 class="all-text">2023-24 Boys Varsity Basketball Standings</h1>
+                <h2 class="all-text">Boys Varsity Basketball Standings</h2>
                 <table class="standings-table">
                     <tr>
                         <th class="table-cell" rowspan="2">##</th>
