pushing landing to front

--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,97 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1 class="header all-text">Southern Ohio Christian Conference</h1>
+    </header>
+    
+    <main>
+        <nav class="navbar">
+            <h1 class="all-text">CONFERENCE LOGO</h1>
+            <ul class="nav-links">
+                <a class="nav-link all-text" href="landing.html">Home</a>
+                <a class="nav-link all-text" href="season-info.html">Boys Varsity Basketball</a>
+                <li class="nav-link all-text">Boys Jr. High Basketball</li>
+                <li class="nav-link all-text">Girls Varsity Basketball</li>
+                <li class="nav-link all-text">Girls Jr. High Basketball</li>
+                <li class="nav-link all-text">ACCS Eagles</li>
+                <li class="nav-link all-text">FCS Crusaders</li>
+                <li class="nav-link all-text">HCA Crusaders</li>
+                <li class="nav-link all-text">RCCA Eagles</li>
+                <li class="nav-link all-text">SCS Soldiers</li>
+                <li class="nav-link all-text">WCA Lions</li>
+                <li class="nav-link all-text">Upcoming Sports</li>
+            </ul>
+        </nav>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/10.5.2/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/10.5.2/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/10.5.2/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/10.5.2/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/10.5.2/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/10.5.2/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/10.5.2/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/10.5.2/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/10.5.2/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/10.5.2/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Hey Raleigh</h2>
-      <!-- <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p> -->
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+        <div class="active">
+            <div class="team-div">
+                <img class="logo team-block" src="assets\logo1soccsports.png">
+                <h3 class="team-id all-text team-block">ACCS Eagles</h3>
+                <p class="record  all-text team-block">0 - 12</p>
+                <div class="next-game-info  team-block">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@FCS Crusaders</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo team-block" src="assets\logo2soccsports.png">
+                <h3 class="team-id all-text team-block">FCS Crusaders</h3>
+                <p class="record all-text team-block">6 - 6</p>
+                <div class="next-game-info team-block">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@ACCS Eagles</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo team-block" src="assets\logo3soccsports.png">
+                <h3 class="team-id all-text team-block">HCA Crusaders</h3>
+                <p class="record all-text team-block">12 - 0</p>
+                <div class="next-game-info team-block">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@RCCA Eagles</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo team-block" src="assets\logo4soccsports.png">
+                <h3 class="team-id all-text team-block">RCCA Eagles</h3>
+                <p class="record  all-text team-block">0 - 12</p>
+                <div class="next-game-info team-block">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@HCA Crusaders</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo team-block" src="assets\logo5soccsports.png">
+                <h3 class="team-id all-text team-block">SCS Soldiers</h3>
+                <p class="record all-text team-block">6 - 6</p>
+                <div class="next-game-info team-block">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@WCA Lions</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+            <div class="team-div">
+                <img class="logo team-block" src="assets\logo6soccsports.png">
+                <h3 class="team-id all-text team-block">WCA Lions</h3>
+                <p class="record all-text team-block">12 - 0</p>
+                <div class="next-game-info team-block">
+                    <p class="all-text info-piece">School in Ohio</p>
+                    <p class="all-text info-piece">@SCS Soldiers</p>
+                    <p class="all-text info-piece">5:00</p>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
 </html>
