--- a/public/season-info.html
+++ b/public/season-info.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <h1 class="all-text">CONFERENCE LOGO</h1>
             <ul class="nav-links">
-                <a class="nav-link all-text" href="landing.html">Home</a>
+                <a class="nav-link all-text" href="index.html">Home</a>
                 <a class="nav-link all-text" href="season-info.html">Boys Varsity Basketball</a>
                 <li class="nav-link all-text">Boys Jr. High Basketball</li>
                 <li class="nav-link all-text">Girls Varsity Basketball</li>
